@@ -175,9 +175,9 @@ bootstraps = [
               609618,
               [],
               'automake-1.6 --version | head -1'),
-    Bootstrap('automake-1.7', '1.7.7',
-              'http://ftp.gnu.org/gnu/automake/automake-1.7.7.tar.gz',
-              734007,
+    Bootstrap('automake-1.7', '1.7.8',
+              'http://ftp.gnu.org/gnu/automake/automake-1.7.8.tar.gz',
+              736697,
               [],
               'automake-1.7 --version | head -1'),
     Bootstrap('pkg-config', '0.15.0',
