@@ -1,3 +1,7 @@
+2003-10-12  James Henstridge  <james@daa.com.au>
+
+	* bootstrap.py (bootstraps): update automake-1.7 to 1.7.8
+
 2003-10-10  Bryan Forbes  <mxpxfifws@yahoo.com>
 
 	* modulesets/gnome24.modules: use gnome-2-4 revision of metacity.
